--- a/src/CaseStudy.Rmd
+++ b/src/CaseStudy.Rmd
@@ -57,7 +57,7 @@ Further interesting settings:
 ```{r settings}
 npoints <- 50 # number of training samples
 
-design <- "biasedWithOutlier"  # either clustered,biased,random, biasedWithOutlier
+design <- "random"  # either clustered,biased,random, biasedWithOutlier
 
 countries <- c("Germany","Ireland","France", "Sweden") #if design==biased
 countriesOutlier <- "Turkmenistan" #if design==biasedWithOutlier A single point is set here
@@ -547,7 +547,7 @@ if(nrow(model$trainingData>=250)){
 }
 
 AOA_new <- calibrate_aoa(AOA,model,window.size = 5,showPlot=FALSE)
-recl <- attributes(AOA_new)$calib$group_stats
+recl <- attributes(AOA_new$AOA)$calib$group_stats
 
 reference_perf <- as.data.frame(stack(AOA$DI,response,prediction))
 reference_perf <- reference_perf[order(reference_perf$DI),]
@@ -555,7 +555,7 @@ names(reference_perf) <- c("DI","obs","pred")
 
 
 ### do this for ul,ll of training data
-slidingw <- attributes(AOA_new)$calib$group_stats
+slidingw <- attributes(AOA_new$AOA)$calib$group_stats
 reference_metric <- apply(slidingw,1,function(x){
   x_df <- data.frame(t(x))
   subs_ref <- reference_perf[reference_perf$DI>x_df$ll&
@@ -563,15 +563,6 @@ reference_metric <- apply(slidingw,1,function(x){
   rmse(subs_ref[,"pred"],subs_ref[,"obs"])
 })
 
-
-#cairo_pdf("../figures/AOA_calibrate_singleCV.pdf", width=6, height=5)
-# plot(recl$DI,recl$RMSE,xlab="DI",ylab=model$metric)
-# points(recl$DI,reference_metric,col="red")
-# legend("topleft",lty=c(NA,NA,2),lwd=c(NA,NA,1),pch=c(1,1,NA),col=c("black","red","black"),
-#        legend=c("CV","Truth","model"),bty="n")
-#   lines(seq(0,max(reference_perf$DI,na.rm=T),0.01),predict(attributes(AOA_new)$calib$model,data.frame("DI"=seq(0,max(reference_perf$DI,na.rm=T),0.01))),lwd=1,lty=2,col="black")
-
-#invisible(dev.off())
 
 ```
 
@@ -600,13 +591,13 @@ if(nrow(model$trainingData>=250)){
 AOA_new_MCV <- calibrate_aoa(AOA,model,multiCV=TRUE,length.out = 10,
                              window.size = window.size,showPlot=FALSE)
 
-recl_mcv <- attributes(AOA_new_MCV)$calib$group_stats
+recl_mcv <- attributes(AOA_new_MCV$AOA)$calib$group_stats
 
 reference_perf_MCV <- as.data.frame(stack(AOA$DI,response,prediction))
 reference_perf_MCV <- reference_perf_MCV[order(reference_perf_MCV$DI),]
 names(reference_perf_MCV) <- c("DI","obs","pred")
 
-slidingw <- attributes(AOA_new_MCV)$calib$group_stats
+slidingw <- attributes(AOA_new_MCV$AOA)$calib$group_stats
 reference_metric_MCV <- apply(slidingw,1,function(x){
   x_df <- data.frame(t(x))
   subs_ref <- reference_perf_MCV[reference_perf_MCV$DI>x_df$ll&
@@ -624,7 +615,7 @@ points(recl$DI,reference_metric,col="red")
 legend("topright",lty=c(NA,NA,2),lwd=c(NA,NA,2),pch=c(1,1,NA),col=c("black","red","blue"),
        legend=c("CV","Truth","model"),bty="n")
 lines(seq(0,max(recl$DI),0.01),
-      predict(attributes(AOA_new)$calib$model,data.frame("DI"=seq(0, max(recl$DI),0.01))),lwd=2,lty=2,col="blue")
+      predict(attributes(AOA_new$AOA)$calib$model,data.frame("DI"=seq(0, max(recl$DI),0.01))),lwd=2,lty=2,col="blue")
 legend("topleft", "(a)", bty="n") 
 
 
@@ -636,19 +627,19 @@ plot(recl_mcv$DI,recl_mcv$RMSE,xlab="DI",
 points(recl_mcv$DI,reference_metric_MCV,col="red")
 
 lines(seq(0,max(recl_mcv$DI),0.01),
-      predict(attributes(AOA_new_MCV)$calib$model,data.frame("DI"=seq(0, max(recl_mcv$DI),0.01))),
+      predict(attributes(AOA_new_MCV$AOA)$calib$model,data.frame("DI"=seq(0, max(recl_mcv$DI),0.01))),
       col="blue",lty=2,lwd=2)
 legend("topleft", "(b)", bty="n") 
 
 invisible(dev.off())
 
 
-stck <- stack(AOA_new[[3]],
-              AOA_new_MCV[[3]])
+stck <- stack(AOA_new$AOA$expected_RMSE,
+              AOA_new_MCV$AOA$expected_RMSE)
 
 tmp <- AOA_new$AOA
 values(tmp)<- NA
-ovl <- stack(AOA_new$AOA,AOA_new_MCV$AOA)
+ovl <- stack(AOA_new$AOA$AOA,AOA_new_MCV$AOA$AOA)
 
 png(paste0("../figures/errormap_calib_",design,".png"),width=18, height=9,units = "cm",res=300)
 spplot(stck,col.regions = cols,,
@@ -662,10 +653,10 @@ invisible(dev.off())
 
 ```{r}
 # model using single-CV
-print(summary(attributes(AOA_new)$calib$model))
+print(summary(attributes(AOA_new$AOA)$calib$model))
 
 # model using multiple-CV
-print(summary(attributes(AOA_new_MCV)$calib$model))
+print(summary(attributes(AOA_new_MCV$AOA)$calib$model))
 ```
 
 ```{r figs8, echo=FALSE, out.width="100%",fig.cap="Relationship between the cross-validated DI and the RMSE using the CV strategy used during initial model training (a) as well as multiple cross-validation folds (clusters in predictor space from few to many clusters) (b). The RMSE was estimated using predictions and observed values within a window of DI values."}
